# python-scsi

./: .gitignore  .pre-commit-config.yaml  .travis.yml  DEVELOPMENT.md  README.md  mypy.ini  pyproject.toml  scsi.py  scsi_cdb_inquiry.py  scsi_command.py  scsi_device.py  scsi_sense.py  setup.cfg  setup.py  sgiomodule.c  test.py
.github/: python-test.yml
.github/workflows/: pre-commit.yml  pypi.yml
examples/: read16.py  read16_with_contextmanger.py  read_cd.py  read_disc_information.py  readcapacity10.py  readcapacity16.py  reportluns.py  reportpriority.py
libiscsi/: Makefile  __init__.py  libiscsi.i  libiscsi.pyx  libiscsimodule.c
libiscsi/tests/: libiscsi_test.py
linux_sgio/: __init__.py  linux_sgio.pyx  sgiomodule.c
pyscsi/: __init__.py
pyscsi/pyiscsi/: __init__.py  iscsi_device.py  iscsi_url.py
pyscsi/pyscsi/: __init__.py  iscsi_device.py  scsi.py  scsi_cdb_atapassthrough12.py  scsi_cdb_atapassthrough16.py  scsi_cdb_exchangemedium.py  scsi_cdb_extended_copy_spc4.py  scsi_cdb_extended_copy_spc5.py  scsi_cdb_getlbastatus.py  scsi_cdb_initelementstatus.py  scsi_cdb_initelementstatuswithrange.py  scsi_cdb_inquiry.py  scsi_cdb_modesense10.py  scsi_cdb_modesense6.py  scsi_cdb_movemedium.py  scsi_cdb_openclose_exportimport_element.py  scsi_cdb_persistentreservein.py  scsi_cdb_persistentreserveout.py  scsi_cdb_positiontoelement.py  scsi_cdb_preventallow_mediumremoval.py  scsi_cdb_read10.py  scsi_cdb_read12.py  scsi_cdb_read16.py  scsi_cdb_readcapacity10.py  scsi_cdb_readcapacity16.py  scsi_cdb_readcd.py  scsi_cdb_readdiscinformation.py  scsi_cdb_readelementstatus.py  scsi_cdb_report_luns.py  (+28 more)
sgio/: __init__.py  sgiomodule.c
tests/: Makefile  __init__.py  mock_device.py  test_cdb_exchangemedium.py  test_cdb_extended_copy_spc4.py  test_cdb_extended_copy_spc5.py  test_cdb_getlbastatus.py  test_cdb_initelementstatus.py  test_cdb_initelementstatuswithrange.py  test_cdb_inquiry.py  test_cdb_modesense10.py  test_cdb_modesense6.py  test_cdb_movemedium.py  test_cdb_openclose_exportimport_element.py  test_cdb_persistentreservein.py  test_cdb_persistentreserveout.py  test_cdb_positiontoelement.py  test_cdb_preventallow_mediumremoval.py  test_cdb_read10.py  test_cdb_read12.py  test_cdb_read16.py  test_cdb_readcapacity10.py  test_cdb_readcapacity16.py  test_cdb_readcd.py  test_cdb_readelementstatus.py  test_cdb_reportpriority.py  test_cdb_reporttargetportgroups.py  test_cdb_synchronize_cache10.py  test_cdb_synchronize_cache16.py  test_cdb_synchronizecache.py  test_cdb_testunitready.py  test_cdb_unmap.py  test_cdb_write10.py  test_cdb_write12.py  test_cdb_write16.py  test_cdb_writesame10.py  test_cdb_writesame16.py  test_enum.py  test_opcode_mapper.py  test_unmarshall_getlbastatus.py  (+7 more)
tools/: getlbastatus.py  inquiry.py  mtx.py  swp.py
(+65 files in other folders)
