# SPDX-FileCopyrightText: 2020 The python-scsi Authors
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
  'setuptools >= 42',
  'wheel',
  'setuptools_scm[toml]>=3.4',
]

[tool.isort]
# These settings ensure that black and isort don't disagree on the imports.
line_length = 88
multi_line_output = 3
include_trailing_comma = true

known_third_party = ['iscsi', 'sgio']

[tool.setuptools_scm]
