# SPDX-FileCopyrightText: 2014 The python-scsi Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = PYSCSI
description = Module for calling SCSI devices from Python
url = https://github.com/python-scsi/python-scsi
license_files =
   LICENSES/*
license = LGPL-2.1+
long_description = file:README.md
long_description_content_type: text/markdown
maintainer = Markus Rosjat
maintainer_email = markus.rosjat@gmail.com
keywords =
    scsi
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
