# SPDX-FileCopyrightText: 2014 The python-scsi Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = PYSCSI
version = 2.1.0
description = Module for calling SCSI devices from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-scsi/python-scsi
maintainer = Markus Rosjat
maintainer_email = markus.rosjat@gmail.com
license = LGPL-2.1
license_file = LICENSE
license_files =
    LICENSES/*
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    scsi

[options]
packages = find:
python_requires = ~= 3.7

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel
iscsi =
    cython-iscsi
sgio =
    cython-sgio>=1.1.2

[options.packages.find]
exclude =
    tests
